--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   ],
   "author": "Rakesh Asapanna <rakesh@v.crejo.fun>",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@tensorflow-models/pose-detection": "0.0.1",
+    "@tensorflow/tfjs-backend-webgl": "^3.8.0",
+    "@tensorflow/tfjs-converter": "^3.8.0",
+    "@tensorflow/tfjs-core": "^3.8.0"
+  }
 }
