--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "description": "",
   "dependencies": {
     "@tensorflow-models/pose-detection": "0.0.1",
+    "@tensorflow/tfjs": "^3.8.0",
     "@tensorflow/tfjs-backend-webgl": "^3.8.0",
     "@tensorflow/tfjs-converter": "^3.8.0",
     "@tensorflow/tfjs-core": "^3.8.0"
